--- a/Cooking with LeftOvers(M)/Layouts/m6_2_main(m).xml
+++ b/Cooking with LeftOvers(M)/Layouts/m6_2_main(m).xml
@@ -718,31 +718,6 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
-                <instance type="m6_2_lulImABG" uid="54">
-                    <properties>
-                        <initial-visibility>Invisible</initial-visibility>
-                        <initial-animation>Default</initial-animation>
-                        <initial-frame>0</initial-frame>
-                        <collisions>Enabled</collisions>
-                    </properties>
-                    <instance-variables>
-                        <fud></fud>
-                    </instance-variables>
-                    <blend-mode>0</blend-mode>
-                    <effect-fallback>0</effect-fallback>
-                    <world>
-                        <x>702</x>
-                        <y>975</y>
-                        <z>0</z>
-                        <width>100</width>
-                        <height>200</height>
-                        <depth>0</depth>
-                        <hotspotX>0.5</hotspotX>
-                        <hotspotY>0.5</hotspotY>
-                        <angle>0</angle>
-                        <opacity>1</opacity>
-                    </world>
-                </instance>
                 <instance type="m6_2_fudIng" uid="55">
                     <properties>
                         <text></text>
@@ -779,11 +754,11 @@
                     </properties>
                     <instance-variables>
                         <hint>false</hint>
-                        <fud1>Starch</fud1>
+                        <fud1>Leaf Veggie</fud1>
                         <fud2>Root Veggie</fud2>
                         <fud3></fud3>
                         <inPot>false</inPot>
-                        <name>MashedPotatoe</name>
+                        <name>CabbageSalad</name>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="DragDrop">
@@ -862,8 +837,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>368</x>
-                        <y>373</y>
+                        <x>307</x>
+                        <y>387</y>
                         <z>0</z>
                         <width>100</width>
                         <height>200</height>
@@ -936,10 +911,10 @@
                     <instance-variables>
                         <hint>false</hint>
                         <fud1>Red Meat</fud1>
-                        <fud2>Starch</fud2>
-                        <fud3></fud3>
+                        <fud2>Fruit</fud2>
+                        <fud3>Dairy</fud3>
                         <inPot>false</inPot>
-                        <name>Pierogies</name>
+                        <name>StuffedPeppers</name>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="DragDrop">
@@ -1039,11 +1014,11 @@
                     </properties>
                     <instance-variables>
                         <hint>false</hint>
-                        <fud1>Poultry</fud1>
-                        <fud2>Fruit</fud2>
+                        <fud1>SeaFood</fud1>
+                        <fud2>Starch</fud2>
                         <fud3></fud3>
                         <inPot>false</inPot>
-                        <name>TurkeyKebab</name>
+                        <name>Calamari</name>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="DragDrop">
@@ -1091,11 +1066,11 @@
                     </properties>
                     <instance-variables>
                         <hint>false</hint>
-                        <fud1>Poultry</fud1>
-                        <fud2></fud2>
-                        <fud3></fud3>
+                        <fud1>Leaf Veggie</fud1>
+                        <fud2>Root Veggie</fud2>
+                        <fud3>Red Meat</fud3>
                         <inPot>false</inPot>
-                        <name>Duck</name>
+                        <name>Gyro</name>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="DragDrop">
@@ -1143,11 +1118,11 @@
                     </properties>
                     <instance-variables>
                         <hint>false</hint>
-                        <fud1>Leaf Veggie</fud1>
+                        <fud1>Root Veggie</fud1>
                         <fud2>Starch</fud2>
-                        <fud3>Poultry</fud3>
+                        <fud3>SeaFood</fud3>
                         <inPot>false</inPot>
-                        <name>StuffedGoose</name>
+                        <name>FishCake</name>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="DragDrop">
@@ -1196,10 +1171,10 @@
                     <instance-variables>
                         <hint>false</hint>
                         <fud1>Root Veggie</fud1>
-                        <fud2>Fruit</fud2>
-                        <fud3>Poultry</fud3>
+                        <fud2></fud2>
+                        <fud3></fud3>
                         <inPot>false</inPot>
-                        <name>Gumbo</name>
+                        <name>Carrots</name>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="DragDrop">
@@ -1228,58 +1203,6 @@
                     <world>
                         <x>719</x>
                         <y>766</y>
-                        <z>0</z>
-                        <width>100</width>
-                        <height>200</height>
-                        <depth>0</depth>
-                        <hotspotX>0.5</hotspotX>
-                        <hotspotY>0.5</hotspotY>
-                        <angle>0</angle>
-                        <opacity>1</opacity>
-                    </world>
-                </instance>
-                <instance type="m6_2_fud" uid="53">
-                    <properties>
-                        <initial-visibility>Visible</initial-visibility>
-                        <initial-animation>Default</initial-animation>
-                        <initial-frame>0</initial-frame>
-                        <collisions>Enabled</collisions>
-                    </properties>
-                    <instance-variables>
-                        <hint>false</hint>
-                        <fud1>Red Meat</fud1>
-                        <fud2>Root Veggie</fud2>
-                        <fud3></fud3>
-                        <inPot>false</inPot>
-                        <name>Porkchops</name>
-                    </instance-variables>
-                    <behavior-instances>
-                        <behavior-instance type="DragDrop">
-                            <properties>
-                                <axes>Both</axes>
-                                <initial-state>Enabled</initial-state>
-                            </properties>
-                        </behavior-instance>
-                        <behavior-instance type="Physics">
-                            <properties>
-                                <immovable>No</immovable>
-                                <collision-mask>Use collision polygon</collision-mask>
-                                <prevent-rotation>No</prevent-rotation>
-                                <density>1</density>
-                                <friction>0.5</friction>
-                                <elasticity>0.2</elasticity>
-                                <linear-damping>0</linear-damping>
-                                <angular-damping>0.01</angular-damping>
-                                <bullet>No</bullet>
-                                <initial-state>Enabled</initial-state>
-                            </properties>
-                        </behavior-instance>
-                    </behavior-instances>
-                    <blend-mode>0</blend-mode>
-                    <effect-fallback>0</effect-fallback>
-                    <world>
-                        <x>632</x>
-                        <y>971</y>
                         <z>0</z>
                         <width>100</width>
                         <height>200</height>
@@ -1466,10 +1389,10 @@
                     <instance-variables>
                         <hint>false</hint>
                         <fud1>Starch</fud1>
-                        <fud2>Root Veggie</fud2>
+                        <fud2></fud2>
                         <fud3></fud3>
                         <inPot>false</inPot>
-                        <name>MashedPotatoe</name>
+                        <name>Rice</name>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="DragDrop">
@@ -1542,11 +1465,11 @@
                     </properties>
                     <instance-variables>
                         <hint>false</hint>
-                        <fud1>Red Meat</fud1>
+                        <fud1>Leaf Veggie</fud1>
                         <fud2>Starch</fud2>
                         <fud3></fud3>
                         <inPot>false</inPot>
-                        <name>Pierogies</name>
+                        <name>SpringRolls</name>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="DragDrop">
@@ -1581,6 +1504,139 @@
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
                         <hotspotY>0.5</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
+                <instance type="m6_2_lulImABG" uid="40">
+                    <properties>
+                        <initial-visibility>Invisible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <instance-variables>
+                        <fud></fud>
+                    </instance-variables>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>658</x>
+                        <y>985</y>
+                        <z>0</z>
+                        <width>100</width>
+                        <height>200</height>
+                        <depth>0</depth>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.5</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
+                <instance type="m6_2_fud" uid="53">
+                    <properties>
+                        <initial-visibility>Visible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <instance-variables>
+                        <hint>false</hint>
+                        <fud1>SeaFood</fud1>
+                        <fud2>Starch</fud2>
+                        <fud3></fud3>
+                        <inPot>false</inPot>
+                        <name>Calamari</name>
+                    </instance-variables>
+                    <behavior-instances>
+                        <behavior-instance type="DragDrop">
+                            <properties>
+                                <axes>Both</axes>
+                                <initial-state>Enabled</initial-state>
+                            </properties>
+                        </behavior-instance>
+                        <behavior-instance type="Physics">
+                            <properties>
+                                <immovable>No</immovable>
+                                <collision-mask>Use collision polygon</collision-mask>
+                                <prevent-rotation>No</prevent-rotation>
+                                <density>1</density>
+                                <friction>0.5</friction>
+                                <elasticity>0.2</elasticity>
+                                <linear-damping>0</linear-damping>
+                                <angular-damping>0.01</angular-damping>
+                                <bullet>No</bullet>
+                                <initial-state>Enabled</initial-state>
+                            </properties>
+                        </behavior-instance>
+                    </behavior-instances>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>606</x>
+                        <y>973</y>
+                        <z>0</z>
+                        <width>100</width>
+                        <height>200</height>
+                        <depth>0</depth>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.5</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
+                <instance type="m6_2_recipeIngrType" uid="54">
+                    <properties>
+                        <initial-visibility>Visible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <instance-variables>
+                        <ingrType>4</ingrType>
+                        <ingr></ingr>
+                    </instance-variables>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>1192</x>
+                        <y>410</y>
+                        <z>0</z>
+                        <width>40</width>
+                        <height>40</height>
+                        <depth>0</depth>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.5</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
+                <instance type="m6_2_counter" uid="60">
+                    <properties>
+                        <text>1</text>
+                        <initial-visibility>Visible</initial-visibility>
+                        <font>Arial,-32,400,0</font>
+                        <color>0,0,0</color>
+                        <horizontal-alignment>Left</horizontal-alignment>
+                        <vertical-alignment>Top</vertical-alignment>
+                        <hotspot>Top-left</hotspot>
+                        <wrapping>Word</wrapping>
+                        <line-height>0</line-height>
+                    </properties>
+                    <instance-variables>
+                        <ingredientType>4</ingredientType>
+                    </instance-variables>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>1213</x>
+                        <y>397</y>
+                        <z>0</z>
+                        <width>321</width>
+                        <height>116</height>
+                        <depth>0</depth>
+                        <hotspotX>0</hotspotX>
+                        <hotspotY>0</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
@@ -1799,7 +1855,7 @@
         </instance>
         <instance type="m6_2_Recipe1" uid="9">
             <properties>
-                <width>4</width>
+                <width>5</width>
                 <height>2</height>
                 <depth>1</depth>
             </properties>
