hard lvl balancing, ingredient change - recipe 5

--- a/Cooking with LeftOvers(H)/Layouts/m6_3_main(h).xml
+++ b/Cooking with LeftOvers(H)/Layouts/m6_3_main(h).xml
@@ -1386,7 +1386,7 @@
                         <hint>false</hint>
                         <fud1>Starch</fud1>
                         <fud2>Poultry</fud2>
-                        <fud3>Red Meat</fud3>
+                        <fud3>Root Veggie</fud3>
                         <inPot>false</inPot>
                         <name>Burek</name>
                     </instance-variables>
