june 29 changelog bar tutorial cuz fuck that

--- a/Cooking with LeftOvers(H)/Layouts/m6_3_main(h).xml
+++ b/Cooking with LeftOvers(H)/Layouts/m6_3_main(h).xml
@@ -174,6 +174,7 @@
                     </properties>
                     <instance-variables>
                         <ingredientType>1</ingredientType>
+                        <max>0</max>
                     </instance-variables>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
@@ -204,6 +205,7 @@
                     </properties>
                     <instance-variables>
                         <ingredientType>3</ingredientType>
+                        <max>0</max>
                     </instance-variables>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
@@ -234,6 +236,7 @@
                     </properties>
                     <instance-variables>
                         <ingredientType>2</ingredientType>
+                        <max>0</max>
                     </instance-variables>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
@@ -508,6 +511,7 @@
                     </properties>
                     <instance-variables>
                         <ingredientType>4</ingredientType>
+                        <max>0</max>
                     </instance-variables>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
@@ -564,6 +568,7 @@
                     </properties>
                     <instance-variables>
                         <ingredientType>5</ingredientType>
+                        <max>0</max>
                     </instance-variables>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
@@ -620,6 +625,7 @@
                     </properties>
                     <instance-variables>
                         <ingredientType>6</ingredientType>
+                        <max>0</max>
                     </instance-variables>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
