--- a/Cooking with Leftovers(E)/Layouts/m6_1_Tutorial.xml
+++ b/Cooking with Leftovers(E)/Layouts/m6_1_Tutorial.xml
@@ -123,6 +123,9 @@
                         <wrapping>Word</wrapping>
                         <line-height>0</line-height>
                     </properties>
+                    <instance-variables>
+                        <warning>0</warning>
+                    </instance-variables>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
@@ -1381,6 +1384,9 @@
                         <initial-frame>0</initial-frame>
                         <collisions>Enabled</collisions>
                     </properties>
+                    <instance-variables>
+                        <noOpen>false</noOpen>
+                    </instance-variables>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
