--- a/Cooking with Leftovers(E)/Layouts/m6_1_main(e).xml
+++ b/Cooking with Leftovers(E)/Layouts/m6_1_main(e).xml
@@ -145,11 +145,14 @@
                         <wrapping>Word</wrapping>
                         <line-height>0</line-height>
                     </properties>
+                    <instance-variables>
+                        <warning>0</warning>
+                    </instance-variables>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
                         <x>970</x>
-                        <y>120</y>
+                        <y>123</y>
                         <z>0</z>
                         <width>870</width>
                         <height>600</height>
@@ -1300,6 +1303,9 @@
                         <initial-frame>0</initial-frame>
                         <collisions>Enabled</collisions>
                     </properties>
+                    <instance-variables>
+                        <noOpen>false</noOpen>
+                    </instance-variables>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
