ingr error for med & timer test on hard

--- a/Cooking with LeftOvers(H)/Layouts/m6_3_main(h).xml
+++ b/Cooking with LeftOvers(H)/Layouts/m6_3_main(h).xml
@@ -118,6 +118,9 @@
                         <initial-frame>0</initial-frame>
                         <collisions>Enabled</collisions>
                     </properties>
+                    <instance-variables>
+                        <color>0</color>
+                    </instance-variables>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
